--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,11 @@
 {
-  "plugins": ["stylelint-order"],
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"],
+  "plugins": [
+    "stylelint-order"
+  ],
+  "extends": [
+    "stylelint-config-standard-scss",
+    "stylelint-config-prettier"
+  ],
   "rules": {
     "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
     "order/order": [
