--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.3.5",
     "@angular/platform-browser": "~13.2.0",
@@ -30,6 +31,7 @@
     "@ngrx/store": "^13.1.0",
     "@ngrx/store-devtools": "^13.1.0",
     "date-fns": "^2.28.0",
+    "firebase": "^9.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
