--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^9.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "dotenv": "^16.0.0",
