--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngrx/store-devtools": "^13.1.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.7.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
