--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "angular-cli-ghpages": "^1.0.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "eslint-plugin-ngrx": "^2.0.0",
